# retele

./: CMakeLists.txt
client/: LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  TreeWidget.cpp  TreeWidget.h  main.cpp
client/test/Users/snistor/Downloads/: VirtualSoc.odt
client/test/Users/snistor/work/ai/: lab6.py
common/: functions.h
server/: Thread.cpp  Thread.h  main.cpp  server.h  util.h
